# backend/routers/tag.go
@@ -12,6 +12,8 @@ func initTagRouter(router *gin.RouterGroup) {
 	{
 		apiRouter.GET("/all", v1.GetAllTags) // 获取标签列表
 		apiRouter.GET("/count", v1.GetTagsCount)
-		apiRouter.GET("/id/:id", v1.GetTag) // 获取标签
+		apiRouter.GET("/id/:id", v1.GetTag)    // 获取标签
+		apiRouter.POST("/add", v1.CreateTag)   // 创建标签
+		apiRouter.PUT("/update", v1.UpdateTag) // 更新标签
 	}
 }
